<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ActivityRegister">

    <EditText
        android:id="@+id/editText_User_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/reg_user_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_Email_Reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editText_Email_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/reg_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/editText_Pass_Reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_User_Reg" />

    <EditText
        android:id="@+id/editText_Pass_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/reg_pass_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/editText_Pass_Confirm_Reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_Email_Reg" />

    <EditText
        android:id="@+id/editText_Pass_Confirm_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/reg_pass_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/spinner_Edad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_Pass_Reg" />

    <Spinner
        android:id="@+id/spinner_Edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/spinner_ages"
        android:prompt="@string/spinner_prompt"
        app:layout_constraintBottom_toTopOf="@id/radio_Group_Sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_Pass_Confirm_Reg" />

    <RadioGroup
        android:id="@+id/radio_Group_Sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/button_Send_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_Edad">

        <RadioButton
            android:id="@+id/radio_Button_Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/radio_Button_Intersex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/radio_intersex" />

        <RadioButton
            android:id="@+id/radio_Button_Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/radio_female" />

    </RadioGroup>

    <Button
    android:id="@+id/button_Send_Register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_button"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/radio_Group_Sex" />

</androidx.constraintlayout.widget.ConstraintLayout>