<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/editText_User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editText_User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/user_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editText_Pass"
        app:layout_constraintTop_toBottomOf="@+id/image01"/>

    <EditText
        android:id="@+id/editText_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:maxLength="8"
        app:layout_constraintBottom_toTopOf="@id/button_Login"
        app:layout_constraintTop_toBottomOf="@+id/editText_User"/>

    <Button
        android:id="@+id/button_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="194dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_button"
        android:textColor="@color/colorButtonFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Pass"/>

</androidx.constraintlayout.widget.ConstraintLayout>